--- a/example/pubspec.yaml
+++ b/example/pubspec.yaml
@@ -30,9 +30,7 @@ dependencies:
   flutter:
     sdk: flutter
 
-  music_xml:
-    path: ..
-  xml: ^6.3.0
+  music_xml: ^1.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
@@ -63,6 +61,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/musicXML.xml
+    - assets/test.xml
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
